--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ S3method("partitionMerge", "partitionCluster")
 export(as.DocumentTermMatrix.partitionCluster)
 export(as.TermDocumentMatrix.partitionCluster)
 export(as.matrix.partitionCluster)
+export(.importPolMineCorpus)
 
 # core/basic statistical functions
 export(collocations)
