--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(as.TermDocumentMatrix.partitionCluster)
 export(as.matrix.partitionCluster)
 export(.importPolMineCorpus)
 export(frequencies)
+export(as.cqpQuery)
 
 # core/basic statistical functions
 export(collocations)
