--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,59 +1,52 @@
-# useDynLib(driller)
-# importFrom(Rcpp, sourceCpp)
-
-import(rcqp)
-importFrom(chron, seq.dates)
-importFrom(slam, simple_triplet_matrix)
-importFrom(tm, as.TermDocumentMatrix, as.DocumentTermMatrix)
-importFrom(RColorBrewer, brewer.pal)
-import(methods)
-importFrom(xtermStyle, style)
-importFrom(shiny, runApp)
-importFrom(parallel, mclapply)
-
-# functions related to partitions
-export(partition)
-exportClasses(partition, cqpQuery)
-export(partitionCluster)
-export(partitionMerge.partitionCluster)
-S3method("partitionMerge", "partitionCluster")
-export(as.DocumentTermMatrix.partitionCluster)
-export(as.TermDocumentMatrix.partitionCluster)
-export(as.matrix.partitionCluster)
+S3method(as.DocumentTermMatrix,partitionCluster)
+S3method(as.TermDocumentMatrix,partitionCluster)
+S3method(as.matrix,partitionCluster)
+S3method(partitionMerge,partitionCluster)
 export(.importPolMineCorpus)
-export(frequencies)
+export(addPos)
 export(as.cqpQuery)
-export(trim)
-
-# core/basic statistical functions
-export(collocations)
-export(kwic)
-export(context)
-export(keyness)
-
-# functions for frequency and distributions
-exportClasses(crosstab)
-exportMethods(mergeCols, mergeColsRegex, filterCols)
-exportMethods(show)
-exportMethods('[', '[[', addPos)
-exportMethods(summary)
-export(dispersion)
-
-# functions for visualisation
-export(lineChart)
 export(bubblegraph)
-export(egoNetwork)
-
-S3method("as.DocumentTermMatrix", "partitionCluster")
-S3method("as.TermDocumentMatrix", "partitionCluster")
-
-export(drillingControls)
-export(shinyContext)
-export(shinyKeyness)
-export(shinyDistribution)
-export(shinyVolatility)
-
-exportMethods(sAttributes)
-
-export(scatterplotCollocates)
+export(collocations)
 export(combineCollocates)
+export(context)
+export(dispersion)
+export(drillingControls)
+export(egoNetwork)
+export(frequencies)
+export(keyness)
+export(kwic)
+export(lineChart)
+export(mergeColsRegex)
+export(partition)
+export(partitionCluster)
+export(scatterplotCollocates)
+export(shinyContext)
+export(shinyDispersion)
+export(shinyKeyness)
+export(shinyVolatility)
+export(trim)
+exportClasses(concordances)
+exportClasses(cqpQuery)
+exportClasses(crosstab)
+exportClasses(keyness)
+exportClasses(kwic)
+exportClasses(partition)
+exportMethods("[")
+exportMethods("[[")
+exportMethods(addPos)
+exportMethods(filterCols)
+exportMethods(mergeCols)
+exportMethods(mergeColsRegex)
+exportMethods(sAttributes)
+exportMethods(show)
+exportMethods(summary)
+import(methods)
+import(rcqp)
+importFrom(RColorBrewer,brewer.pal)
+importFrom(chron,seq.dates)
+importFrom(parallel,mclapply)
+importFrom(shiny,runApp)
+importFrom(slam,simple_triplet_matrix)
+importFrom(tm,as.DocumentTermMatrix)
+importFrom(tm,as.TermDocumentMatrix)
+importFrom(xtermStyle,style)
