most importantly: zoom function introduced

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(bubblegraph)
 export(collocations)
 export(combineCollocates)
 export(context)
+export(crosstabulationSizes)
+export(datesPeriod)
 export(dispersion)
 export(drillingControls)
 export(egoNetwork)
@@ -25,6 +27,7 @@ export(shinyDispersion)
 export(shinyKeyness)
 export(shinyVolatility)
 export(trim)
+export(zoom)
 exportClasses(concordances)
 exportClasses(cqpQuery)
 exportClasses(crosstab)
