contextCluster and respective methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,14 +1,18 @@
 S3method(as.DocumentTermMatrix,partitionCluster)
+S3method(as.TermContextMatrix,contextCluster)
 S3method(as.TermDocumentMatrix,partitionCluster)
+S3method(as.matrix,contextCluster)
 S3method(as.matrix,partitionCluster)
 S3method(partitionMerge,partitionCluster)
 export(.importPolMineCorpus)
 export(addPos)
+export(adjust)
 export(as.cqpQuery)
 export(bubblegraph)
 export(collocations)
 export(combineCollocates)
 export(context)
+export(contextCluster)
 export(crosstabulationSizes)
 export(datesPeriod)
 export(dispersion)
