--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,12 +1,4 @@
-S3method(as.DocumentTermMatrix,partitionCluster)
-S3method(as.TermContextMatrix,contextCluster)
-S3method(as.TermDocumentMatrix,partitionCluster)
-S3method(as.matrix,contextCluster)
-S3method(as.matrix,partitionCluster)
-S3method(partitionMerge,partitionCluster)
 export(.importPolMineCorpus)
-export(addPos)
-export(adjust)
 export(as.cqpQuery)
 export(bubblegraph)
 export(collocations)
@@ -30,22 +22,32 @@ export(shinyContext)
 export(shinyDispersion)
 export(shinyKeyness)
 export(shinyVolatility)
-export(trim)
 export(zoom)
 exportClasses(concordances)
 exportClasses(crosstab)
 exportClasses(keyness)
 exportClasses(kwic)
 exportClasses(partition)
+exportClasses(partitionCluster)
+exportMethods("+")
 exportMethods("[")
 exportMethods("[[")
 exportMethods(addPos)
+exportMethods(as.DocumentTermMatrix)
+exportMethods(as.TermContextMatrix)
+exportMethods(as.TermDocumentMatrix)
+exportMethods(as.matrix)
 exportMethods(filterCols)
+exportMethods(merge)
 exportMethods(mergeCols)
 exportMethods(mergeColsRegex)
+exportMethods(names)
 exportMethods(sAttributes)
 exportMethods(show)
 exportMethods(summary)
+exportMethods(tf)
+exportMethods(trim)
+import(Matrix)
 import(methods)
 import(rcqp)
 importFrom(RColorBrewer,brewer.pal)
