more partitionCluster methods (particularly +, enhanced summary-method)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.matrix)
+exportMethods(as.partitionCluster)
 exportMethods(filterCols)
 exportMethods(merge)
 exportMethods(mergeCols)
