initial export functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
+exportMethods(enrich)
+exportMethods(export)
 exportMethods(filterCols)
 exportMethods(merge)
 exportMethods(mergeCols)
@@ -45,6 +47,7 @@ exportMethods(mergeColsRegex)
 exportMethods(names)
 exportMethods(sAttributes)
 exportMethods(show)
+exportMethods(split)
 exportMethods(summary)
 exportMethods(tf)
 exportMethods(trim)
