--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,8 +39,8 @@ exportMethods(as.TermDocumentMatrix)
 exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
 exportMethods(enrich)
-exportMethods(export)
 exportMethods(filterCols)
+exportMethods(html)
 exportMethods(merge)
 exportMethods(mergeCols)
 exportMethods(mergeColsRegex)
@@ -52,6 +52,7 @@ exportMethods(summary)
 exportMethods(tf)
 exportMethods(trim)
 import(Matrix)
+import(markdown)
 import(methods)
 import(rcqp)
 importFrom(RColorBrewer,brewer.pal)
