--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ exportMethods(as.partitionCluster)
 exportMethods(enrich)
 exportMethods(filterCols)
 exportMethods(html)
+exportMethods(mail)
 exportMethods(merge)
 exportMethods(mergeCols)
 exportMethods(mergeColsRegex)
@@ -52,14 +53,17 @@ exportMethods(summary)
 exportMethods(tf)
 exportMethods(trim)
 import(Matrix)
-import(markdown)
 import(methods)
 import(rcqp)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(chron,seq.dates)
+importFrom(markdown,markdownToHTML)
 importFrom(parallel,mclapply)
+importFrom(sendmailR,sendmail)
+importFrom(sendmailR,sendmail_options)
 importFrom(shiny,runApp)
 importFrom(slam,simple_triplet_matrix)
 importFrom(tm,as.DocumentTermMatrix)
 importFrom(tm,as.TermDocumentMatrix)
+importFrom(xlsx,write.xlsx)
 importFrom(xtermStyle,style)
