--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: driller
 Type: Package
 Title: driller
-Version: 0.4.25
-Date: 2014-05-01
+Version: 0.4.26
+Date: 2014-05-07
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Depends:
@@ -17,7 +17,9 @@ Imports:
     parallel,
     xtermStyle,
     RColorBrewer,
-    markdown
+    markdown,
+    xlsx,
+    sendmailR
 Suggests:
     knitr
 VignetteBuilder: knitr
@@ -27,3 +29,21 @@ Description: Tools for drilling and mining CWB corpora. The package offers
     serve as an interface to packages implementing advanced statistical
     procedures.
 License: CC BY-NC-SA 3.0 | file LICENSE
+Collate:
+    'RcppExports.R'
+    'context.R'
+    'contextCluster.R'
+    'controls.R'
+    'dispersion.R'
+    'driller-package.R'
+    'generics.R'
+    'statistics.R'
+    'export.R'
+    'frequency.R'
+    'import.R'
+    'partition.R'
+    'partitionCluster.R'
+    'query.R'
+    'shiny.R'
+    'utils.R'
+    'visualization.R'
