first version of drillver v0.4.27

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,12 @@ export(as.cqpQuery)
 export(bubblegraph)
 export(collocations)
 export(combineCollocates)
-export(context)
-export(contextCluster)
 export(crosstabulationSizes)
 export(datesPeriod)
 export(dispersion)
 export(drillingControls)
 export(egoNetwork)
 export(frequencies)
-export(keyness)
 export(kwic)
 export(lineChart)
 export(mergeColsRegex)
@@ -38,9 +35,11 @@ exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
+exportMethods(context)
 exportMethods(enrich)
 exportMethods(filterCols)
 exportMethods(html)
+exportMethods(keyness)
 exportMethods(mail)
 exportMethods(merge)
 exportMethods(mergeCols)
