--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: driller
 Type: Package
 Title: driller
-Version: 0.4.26
-Date: 2014-05-07
+Version: 0.4.27
+Date: 2014-05-27
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Depends:
@@ -31,18 +31,19 @@ Description: Tools for drilling and mining CWB corpora. The package offers
 License: CC BY-NC-SA 3.0 | file LICENSE
 Collate:
     'RcppExports.R'
+    'generics.R'
+    'partition.R'
     'context.R'
+    'partitionCluster.R'
     'contextCluster.R'
     'controls.R'
     'dispersion.R'
     'driller-package.R'
-    'generics.R'
     'statistics.R'
     'export.R'
     'frequency.R'
     'import.R'
-    'partition.R'
-    'partitionCluster.R'
+    'keyness.R'
     'query.R'
     'shiny.R'
     'utils.R'
