adjusting package more coherently to OOP logic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@ export(.importPolMineCorpus)
 export(as.cqpQuery)
 export(bubblegraph)
 export(collocations)
-export(combineCollocates)
 export(crosstabulationSizes)
 export(datesPeriod)
 export(dispersion)
@@ -11,7 +10,6 @@ export(egoNetwork)
 export(frequencies)
 export(kwic)
 export(lineChart)
-export(mergeColsRegex)
 export(partition)
 export(partitionCluster)
 export(scatterplotCollocates)
@@ -29,7 +27,6 @@ exportClasses(partitionCluster)
 exportMethods("+")
 exportMethods("[")
 exportMethods("[[")
-exportMethods(addPos)
 exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
@@ -37,15 +34,14 @@ exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
 exportMethods(context)
 exportMethods(enrich)
-exportMethods(filterCols)
 exportMethods(html)
 exportMethods(keyness)
 exportMethods(mail)
 exportMethods(merge)
-exportMethods(mergeCols)
-exportMethods(mergeColsRegex)
+exportMethods(meta)
 exportMethods(names)
 exportMethods(sAttributes)
+exportMethods(score)
 exportMethods(show)
 exportMethods(split)
 exportMethods(summary)
