--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: driller
 Type: Package
 Title: driller
-Version: 0.4.27
-Date: 2014-05-27
+Version: 0.4.28
+Date: 2014-06-27
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Depends:
@@ -32,19 +32,27 @@ License: CC BY-NC-SA 3.0 | file LICENSE
 Collate:
     'RcppExports.R'
     'generics.R'
-    'partition.R'
-    'context.R'
     'partitionCluster.R'
+    'partition.R'
+    'kwic.R'
+    'context.R'
     'contextCluster.R'
     'controls.R'
     'dispersion.R'
     'driller-package.R'
+    'keyness.R'
+    'enrich.R'
     'statistics.R'
     'export.R'
     'frequency.R'
+    'html.R'
     'import.R'
-    'keyness.R'
+    'meta.R'
     'query.R'
+    'sAttributes.R'
+    'score.R'
     'shiny.R'
+    'tf.R'
+    'trim.R'
     'utils.R'
     'visualization.R'
