--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,12 @@ export(.importPolMineCorpus)
 export(as.cqpQuery)
 export(bubblegraph)
 export(collocations)
-export(crosstabulationSizes)
+export(controls)
 export(datesPeriod)
 export(dispersion)
 export(drillingControls)
 export(egoNetwork)
 export(frequencies)
-export(kwic)
 export(lineChart)
 export(partition)
 export(partitionCluster)
@@ -43,6 +42,7 @@ exportMethods(names)
 exportMethods(sAttributes)
 exportMethods(score)
 exportMethods(show)
+exportMethods(speeches)
 exportMethods(split)
 exportMethods(summary)
 exportMethods(tf)
