--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,8 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(chron,seq.dates)
 importFrom(markdown,markdownToHTML)
 importFrom(parallel,mclapply)
+importFrom(plyr,llply)
+importFrom(sendmailR,mime_part)
 importFrom(sendmailR,sendmail)
 importFrom(sendmailR,sendmail_options)
 importFrom(shiny,runApp)
