--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: driller
 Type: Package
 Title: driller
-Version: 0.4.29
-Date: 2014-06-29
+Version: 0.4.31
+Date: 2014-08-10
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Depends:
@@ -34,26 +34,26 @@ Collate:
     'RcppExports.R'
     'partition.R'
     'generics.R'
-    'partitionCluster.R'
-    'kwic.R'
     'context.R'
     'contextCluster.R'
     'controls.R'
     'dispersion.R'
     'driller-package.R'
-    'keyness.R'
-    'enrich.R'
     'frequency.R'
     'html.R'
     'import.R'
+    'keyness.R'
+    'kwic.R'
     'statistics.R'
     'mail.R'
     'meta.R'
+    'partitionCluster.R'
     'query.R'
     'sAttributes.R'
     'score.R'
     'shiny.R'
     'speeches.R'
+    'terms.R'
     'tf.R'
     'trim.R'
     'utils.R'
