--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(datesPeriod)
 export(dispersion)
 export(drillingControls)
 export(egoNetwork)
+export(flatten)
 export(frequencies)
 export(lineChart)
 export(partition)
@@ -30,11 +31,13 @@ exportMethods("[[")
 exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
+exportMethods(as.data.frame)
 exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
 exportMethods(context)
 exportMethods(enrich)
 exportMethods(html)
+exportMethods(info)
 exportMethods(keyness)
 exportMethods(kwic)
 exportMethods(mail)
