--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: driller
+Package: polmineR
 Type: Package
-Title: driller
+Title: polmineR
 Version: 0.4.31
-Date: 2014-08-10
+Date: 2014-09-01
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Depends:
