--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(shinyDispersion)
 export(shinyKeyness)
 export(shinyVolatility)
 export(zoom)
+exportClasses(context)
 exportClasses(crosstab)
 exportClasses(keyness)
 exportClasses(kwic)
@@ -28,12 +29,15 @@ exportClasses(partitionCluster)
 exportMethods("+")
 exportMethods("[")
 exportMethods("[[")
+exportMethods(addPos)
 exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.data.frame)
 exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
+exportMethods(as.sparseMatrix)
+exportMethods(barplot)
 exportMethods(context)
 exportMethods(enrich)
 exportMethods(html)
@@ -53,6 +57,7 @@ exportMethods(summary)
 exportMethods(terms)
 exportMethods(tf)
 exportMethods(trim)
+exportMethods(weigh)
 import(Matrix)
 import(methods)
 import(rcqp)
@@ -66,7 +71,7 @@ importFrom(sendmailR,sendmail)
 importFrom(sendmailR,sendmail_options)
 importFrom(shiny,runApp)
 importFrom(slam,simple_triplet_matrix)
-importFrom(tm,as.DocumentTermMatrix)
-importFrom(tm,as.TermDocumentMatrix)
 importFrom(xlsx,write.xlsx)
 importFrom(xtermStyle,style)
+importMethodsFrom(tm,as.DocumentTermMatrix)
+importMethodsFrom(tm,as.TermDocumentMatrix)
