--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: polmineR
 Type: Package
 Title: polmineR
-Version: 0.4.31
+Version: 0.4.32
 Date: 2014-09-01
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
@@ -32,19 +32,26 @@ Description: Tools for drilling and mining CWB corpora. The package offers
 License: CC BY-NC-SA 3.0 | file LICENSE
 Collate:
     'RcppExports.R'
-    'partition.R'
-    'methods.R'
+    'partition-class.R'
+    'partitionCluster-class.R'
+    'keyness-class.R'
+    'keynessCluster-class.R'
+    'context-class.R'
+    'contextCluster-class.R'
+    'kwic-class.R'
     'context.R'
+    'statistics.R'
+    'partition.R'
+    'keyness.R'
+    'dispersion.R'
+    'methods.R'
     'contextCluster.R'
     'controls.R'
-    'dispersion.R'
     'driller-package.R'
     'frequency.R'
     'html.R'
     'import.R'
-    'keyness.R'
     'kwic.R'
-    'statistics.R'
     'mail.R'
     'meta.R'
     'partitionCluster.R'
@@ -55,6 +62,8 @@ Collate:
     'speeches.R'
     'terms.R'
     'tf.R'
+    'tfidf.R'
     'trim.R'
     'utils.R'
     'visualization.R'
+    'asMatrix-methods.R'
