--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,12 +15,14 @@ export(shinyContext)
 export(shinyDispersion)
 export(shinyKeyness)
 export(shinyVolatility)
+exportClasses(collocations)
 exportClasses(context)
 exportClasses(crosstab)
 exportClasses(keyness)
 exportClasses(kwic)
 exportClasses(partition)
 exportClasses(partitionCluster)
+exportClasses(textstat)
 exportMethods("+")
 exportMethods("[")
 exportMethods("[[")
@@ -43,6 +45,7 @@ exportMethods(frequencies)
 exportMethods(html)
 exportMethods(keyness)
 exportMethods(kwic)
+exportMethods(ll)
 exportMethods(mail)
 exportMethods(merge)
 exportMethods(meta)
@@ -69,6 +72,7 @@ importFrom(sendmailR,mime_part)
 importFrom(sendmailR,sendmail)
 importFrom(sendmailR,sendmail_options)
 importFrom(shiny,runApp)
+importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,simple_triplet_matrix)
 importFrom(tm,as.DocumentTermMatrix)
 importFrom(tm,as.TermDocumentMatrix)
