--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,6 @@ export(flatten)
 export(linechart)
 export(partition)
 export(partitionCluster)
-export(shinyContext)
-export(shinyDispersion)
-export(shinyKeyness)
-export(shinyVolatility)
 exportClasses(collocations)
 exportClasses(context)
 exportClasses(crosstab)
@@ -31,6 +27,7 @@ exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.data.frame)
+exportMethods(as.igraph)
 exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
 exportMethods(as.sparseMatrix)
@@ -66,12 +63,18 @@ import(methods)
 import(rcqp)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(chron,seq.dates)
+importFrom(doParallel,registerDoParallel)
+importFrom(igraph,as.igraph)
+importFrom(igraph,graph.data.frame)
 importFrom(markdown,markdownToHTML)
+importFrom(parallel,detectCores)
+importFrom(parallel,makeCluster)
+importFrom(parallel,mccollect)
 importFrom(parallel,mclapply)
+importFrom(parallel,mcparallel)
 importFrom(sendmailR,mime_part)
 importFrom(sendmailR,sendmail)
 importFrom(sendmailR,sendmail_options)
-importFrom(shiny,runApp)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,simple_triplet_matrix)
 importFrom(tm,as.DocumentTermMatrix)
