--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,6 @@ export(drillingControls)
 export(egoNetwork)
 export(flatten)
 export(linechart)
-export(partition)
 export(partitionCluster)
 exportClasses(collocations)
 exportClasses(context)
@@ -47,6 +46,7 @@ exportMethods(mail)
 exportMethods(merge)
 exportMethods(meta)
 exportMethods(names)
+exportMethods(partition)
 exportMethods(sAttributes)
 exportMethods(scatterplot)
 exportMethods(score)
