--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,11 @@ export(flatten)
 export(linechart)
 export(partitionCluster)
 exportClasses(collocations)
+exportClasses(collocationsReshaped)
 exportClasses(context)
 exportClasses(crosstab)
 exportClasses(keyness)
+exportClasses(keynessCollocations)
 exportClasses(kwic)
 exportClasses(partition)
 exportClasses(partitionCluster)
@@ -26,7 +28,6 @@ exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.data.frame)
-exportMethods(as.igraph)
 exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
 exportMethods(as.sparseMatrix)
@@ -64,8 +65,7 @@ import(rcqp)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(chron,seq.dates)
 importFrom(doParallel,registerDoParallel)
-importFrom(igraph,as.igraph)
-importFrom(igraph,graph.data.frame)
+importFrom(htmltools,html_print)
 importFrom(markdown,markdownToHTML)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
