--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ exportMethods(tf)
 exportMethods(trim)
 exportMethods(weigh)
 exportMethods(zoom)
+import(DataTablesR)
 import(Matrix)
 import(methods)
 import(rcqp)
