--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: polmineR
 Type: Package
 Title: polmineR
-Version: 0.4.39
-Date: 2014-11-29
+Version: 0.4.41
+Date: 2014-12-01
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Depends:
     rcqp,
     tm,
-    Matrix
+    Matrix,
+    DataTablesR
 Imports:
     chron,
     methods,
