--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(egoNetwork)
 export(flatten)
 export(linechart)
 export(partitionCluster)
+export(session)
 exportClasses(collocations)
 exportClasses(collocationsReshaped)
 exportClasses(context)
@@ -19,6 +20,7 @@ exportClasses(keynessCollocations)
 exportClasses(kwic)
 exportClasses(partition)
 exportClasses(partitionCluster)
+exportClasses(session)
 exportClasses(textstat)
 exportMethods("+")
 exportMethods("[")
@@ -45,14 +47,15 @@ exportMethods(kwic)
 exportMethods(ll)
 exportMethods(mail)
 exportMethods(merge)
-exportMethods(meta)
 exportMethods(names)
 exportMethods(partition)
+exportMethods(restore)
 exportMethods(sAttributes)
 exportMethods(scatterplot)
 exportMethods(score)
 exportMethods(show)
 exportMethods(split)
+exportMethods(store)
 exportMethods(summary)
 exportMethods(terms)
 exportMethods(tf)
