--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,21 +39,36 @@ exportMethods(collocations)
 exportMethods(context)
 exportMethods(dispersion)
 exportMethods(egoNetwork)
+exportMethods(email)
 exportMethods(enrich)
+exportMethods(filterType)
 exportMethods(frequencies)
 exportMethods(html)
 exportMethods(keyness)
 exportMethods(kwic)
+exportMethods(kwicMetadata)
+exportMethods(kwicNo)
+exportMethods(leftContext)
 exportMethods(ll)
 exportMethods(mail)
 exportMethods(merge)
+exportMethods(metadata)
+exportMethods(minFrequency)
+exportMethods(minSignificance)
+exportMethods(multicore)
 exportMethods(names)
+exportMethods(pAttribute)
 exportMethods(partition)
+exportMethods(posFilter)
+exportMethods(project)
 exportMethods(restore)
+exportMethods(rightContext)
 exportMethods(sAttributes)
 exportMethods(scatterplot)
 exportMethods(score)
 exportMethods(show)
+exportMethods(smtpPort)
+exportMethods(smtpServer)
 exportMethods(split)
 exportMethods(store)
 exportMethods(summary)
@@ -65,10 +80,13 @@ exportMethods(zoom)
 import(DataTablesR)
 import(Matrix)
 import(methods)
+import(polmineR.sampleCorpus)
 import(rcqp)
+importFrom(Matrix,rowSums)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(chron,seq.dates)
 importFrom(doParallel,registerDoParallel)
+importFrom(htmltools,HTML)
 importFrom(htmltools,html_print)
 importFrom(markdown,markdownToHTML)
 importFrom(parallel,detectCores)
@@ -83,5 +101,6 @@ importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,simple_triplet_matrix)
 importFrom(tm,as.DocumentTermMatrix)
 importFrom(tm,as.TermDocumentMatrix)
+importFrom(tm,stopwords)
 importFrom(xlsx,write.xlsx)
 importFrom(xtermStyle,style)
