--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,9 @@
 export(.importPolMineCorpus)
 export(as.cqp)
 export(collocations)
-export(controls)
 export(datesPeriod)
-export(drillingControls)
 export(egoNetwork)
 export(flatten)
-export(linechart)
 export(partitionCluster)
 export(session)
 exportClasses(collocations)
@@ -25,6 +22,22 @@ exportClasses(textstat)
 exportMethods("+")
 exportMethods("[")
 exportMethods("[[")
+exportMethods("corpus<-")
+exportMethods("email<-")
+exportMethods("filterType<-")
+exportMethods("kwicMetadata<-")
+exportMethods("kwicNo<-")
+exportMethods("leftContext<-")
+exportMethods("metadata<-")
+exportMethods("minFrequency<-")
+exportMethods("minSignificance<-")
+exportMethods("multicore<-")
+exportMethods("pAttribute<-")
+exportMethods("posFilter<-")
+exportMethods("project<-")
+exportMethods("rightContext<-")
+exportMethods("smtpPort<-")
+exportMethods("smtpServer<-")
 exportMethods(addPos)
 exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermContextMatrix)
@@ -34,9 +47,10 @@ exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
 exportMethods(as.sparseMatrix)
 exportMethods(barplot)
-exportMethods(bubblegraph)
+exportMethods(browse)
 exportMethods(collocations)
 exportMethods(context)
+exportMethods(corpus)
 exportMethods(dispersion)
 exportMethods(egoNetwork)
 exportMethods(email)
@@ -72,35 +86,21 @@ exportMethods(smtpServer)
 exportMethods(split)
 exportMethods(store)
 exportMethods(summary)
+exportMethods(tag)
 exportMethods(terms)
 exportMethods(tf)
 exportMethods(trim)
 exportMethods(weigh)
 exportMethods(zoom)
-import(DataTablesR)
 import(Matrix)
 import(methods)
-import(polmineR.sampleCorpus)
 import(rcqp)
 importFrom(Matrix,rowSums)
-importFrom(RColorBrewer,brewer.pal)
-importFrom(chron,seq.dates)
-importFrom(doParallel,registerDoParallel)
-importFrom(htmltools,HTML)
-importFrom(htmltools,html_print)
-importFrom(markdown,markdownToHTML)
-importFrom(parallel,detectCores)
-importFrom(parallel,makeCluster)
 importFrom(parallel,mccollect)
 importFrom(parallel,mclapply)
 importFrom(parallel,mcparallel)
-importFrom(sendmailR,mime_part)
-importFrom(sendmailR,sendmail)
-importFrom(sendmailR,sendmail_options)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,simple_triplet_matrix)
 importFrom(tm,as.DocumentTermMatrix)
 importFrom(tm,as.TermDocumentMatrix)
 importFrom(tm,stopwords)
-importFrom(xlsx,write.xlsx)
-importFrom(xtermStyle,style)
