--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,15 +92,34 @@ exportMethods(tf)
 exportMethods(trim)
 exportMethods(weigh)
 exportMethods(zoom)
-import(Matrix)
 import(methods)
-import(rcqp)
+importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
+importFrom(Matrix,sparseMatrix)
 importFrom(parallel,mccollect)
 importFrom(parallel,mclapply)
 importFrom(parallel,mcparallel)
+importFrom(plyr,join)
+importFrom(rcqp,cqi_attribute_size)
+importFrom(rcqp,cqi_attributes)
+importFrom(rcqp,cqi_cpos2id)
+importFrom(rcqp,cqi_cpos2str)
+importFrom(rcqp,cqi_cpos2struc)
+importFrom(rcqp,cqi_dump_subcorpus)
+importFrom(rcqp,cqi_id2cpos)
+importFrom(rcqp,cqi_id2freq)
+importFrom(rcqp,cqi_id2str)
+importFrom(rcqp,cqi_lexicon_size)
+importFrom(rcqp,cqi_list_corpora)
+importFrom(rcqp,cqi_query)
+importFrom(rcqp,cqi_regex2id)
+importFrom(rcqp,cqi_str2id)
+importFrom(rcqp,cqi_struc2cpos)
+importFrom(rcqp,cqi_struc2str)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,simple_triplet_matrix)
+importFrom(tm,DocumentTermMatrix)
+importFrom(tm,TermDocumentMatrix)
 importFrom(tm,as.DocumentTermMatrix)
 importFrom(tm,as.TermDocumentMatrix)
 importFrom(tm,stopwords)
