--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: polmineR
 Type: Package
 Title: polmineR
-Version: 0.4.47
-Date: 2015-01-19
+Version: 0.4.48
+Date: 2015-01-22
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
-Depends:
-    rcqp,
-    tm,
-    Matrix
 Imports:
+    Matrix,
+    tm,
+    rcqp,
     methods,
     slam,
-    parallel
+    parallel,
+    plyr
 Suggests:
     polmineR.sampleCorpus,
     markdown,
@@ -39,13 +39,13 @@ Collate:
     'textstat-class.R'
     'keyness-class.R'
     'addPos-method.R'
-    'context-class.R'
-    'contextCluster-class.R'
-    'collocations-class.R'
-    'as.Class-method.R'
     'kwic-class.R'
+    'context-class.R'
     'browse-method.R'
     'chisquare-method.R'
+    'contextCluster-class.R'
+    'collocations-class.R'
+    'coerce-methods.R'
     'collocations-method.R'
     'collocations-methods.R'
     'collocationsCluster-class.R'
