--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermContextMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.data.frame)
+exportMethods(as.markdown)
 exportMethods(as.matrix)
 exportMethods(as.partitionCluster)
 exportMethods(as.sparseMatrix)
