--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ exportMethods(pAttribute)
 exportMethods(partition)
 exportMethods(posFilter)
 exportMethods(project)
+exportMethods(read)
 exportMethods(restore)
 exportMethods(rightContext)
 exportMethods(sAttributes)
